--- a/.github/workflows/tauri-build.yml
+++ b/.github/workflows/tauri-build.yml
@@ -12,34 +12,36 @@ jobs:
       matrix:
         platform: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.platform }}
-
+    
     steps:
     - uses: actions/checkout@v4
-
+    
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: 8
+    
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
         cache: 'pnpm'
-
-    - name: Install pnpm
-      run: npm install -g pnpm
-
+    
     - name: Setup Rust
       uses: dtolnay/rust-toolchain@stable
-
+    
     - name: Install dependencies (Ubuntu)
       if: matrix.platform == 'ubuntu-latest'
       run: |
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-
+    
     - name: Install frontend dependencies
       run: pnpm install
-
+    
     - name: Build Tauri app
       run: pnpm tauri build
-
+    
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
@@ -50,47 +52,49 @@ jobs:
 
   build-android:
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v4
-
+    
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: 8
+    
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
         cache: 'pnpm'
-
-    - name: Install pnpm
-      run: npm install -g pnpm
-
+    
     - name: Setup Rust
       uses: dtolnay/rust-toolchain@stable
       with:
         targets: aarch64-linux-android,armv7-linux-androideabi,i686-linux-android,x86_64-linux-android
-
+    
     - name: Setup Java
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '17'
-
+    
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
-
+    
     - name: Install Android NDK
       run: |
-        sdkmanager "ndk;29.0.13846066"
-        echo "ANDROID_NDK_ROOT=$ANDROID_SDK_ROOT/ndk/29.0.13846066" >> $GITHUB_ENV
-
+        sdkmanager "ndk;25.0.8775105"
+        echo "ANDROID_NDK_ROOT=$ANDROID_SDK_ROOT/ndk/25.0.8775105" >> $GITHUB_ENV
+    
     - name: Install frontend dependencies
       run: pnpm install
-
+    
     - name: Initialize Tauri Android
       run: pnpm tauri android init
-
+    
     - name: Build Android APK
       run: pnpm tauri android build
-
+    
     - name: Upload Android artifacts
       uses: actions/upload-artifact@v4
       with:
