--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
-
+        with:
+          version: 10.24.0
+          
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
 
@@ -83,7 +85,7 @@ jobs:
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: e-procurement-Android
+          name: Shpnlst-Android
           path: |
             src-tauri/gen/android/app/build/outputs/apk/**/*.apk
           retention-days: 7
@@ -92,7 +94,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: e-procurement-Android-Bundle
+          name: Shpnlst-Android-Bundle
           path: |
             src-tauri/gen/android/app/build/outputs/bundle/**/*.aab
           retention-days: 7
