--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10.24.0
-          
+          version: latest
+
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
 
