--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -1,9 +1,9 @@
 name: Build Android App
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  # push:
+  #   tags:
+  #     - 'v*.*.*'
   workflow_dispatch:
 
 concurrency:
